Coursework_1. improved and upgraded some method in Employee and EmployeeBook